<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:fab="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        android:orientation="vertical">
    <include layout="@layout/toolbar"/>

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/placesList"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@android:color/white"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_icon="@drawable/ic_baseline_map"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_colorPressed="@color/colorPrimaryPressed"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>

        <FrameLayout
                android:id="@+id/noData"
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:visibility="gone"
                android:layout_height="match_parent">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/no_data_found"
            />
        </FrameLayout>
        <FrameLayout
                android:id="@+id/loadingIndicator"
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:visibility="gone"
                android:layout_height="match_parent">
            <ProgressBar android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
            />
        </FrameLayout>
        <FrameLayout android:id="@+id/firstPrompt"
                     android:layout_width="match_parent"
                     android:background="@android:color/white"
                     android:layout_height="match_parent">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                <ImageView android:layout_width="64dp" android:layout_height="64dp"
                           android:layout_gravity="center"
                           android:src="@drawable/ic_baseline_search" android:contentDescription="@string/cd_search"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:textColor="@color/prompt_text_color"
                          android:textSize="@dimen/text_20"
                          android:text="@string/search_seattle_places"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/prompt_text_color"
                          android:layout_gravity="center"
                          android:textSize="@dimen/text_12"
                          android:text="@string/find_your_favorite_places"
                />
            </LinearLayout>
        </FrameLayout>

    </FrameLayout>
</LinearLayout>